# school-app

./: README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  parse_connection.rs  sql.rs
frontend/src/: App.tsx
