[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
mysql_async = "0.31.2"
bytes = "1.3.0"

[dev-dependencies]
tokio-test = "*"
